--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        
+            <p><strong>This new is <em>mainly</em> for adults</strong></p>
         <h1 class="h1Style">This is our first try</h1>
         <script src="" async defer></script>
     </body>
