--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+          <style>
+            p{
+              color:aquamarine
+            }
+          </style>
         <title>BEARS</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
