adding script tag

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
               Video not supported
               </video>
             </div>
-          </body>
-          
+            <script src="script.js"></script>
     </body>
 </html>
