--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
               </video>
             </div>
             <script src="script.js"></script>
+            <script src="js.js"></script>
     </body>
 </html>
